[fian] add some red zone, ganti kontak

--- a/kontak.html
+++ b/kontak.html
@@ -130,8 +130,7 @@
               <div class="contact-no">
                 <h4 class="heading-medium  mb-10 fw700">Kontak Kami</h4>
                 <p class=" heading-small mb-0">
-                  <a href="https://api.whatsapp.com/send?phone=6281946337780&text=hai" target="_blank" class="btn btn-color">Hubungi Mad-Covid</a>
-
+                  <a href="https://api.whatsapp.com/send?phone=6281946337780&text=hai" target="_blank" >Hubungi Mad-Covid</a>
                   <a href="">Email: bangkalancovid19@gmail.com</a><br />
                 </p>
               </div>
