[fian] nambah new style

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 
   <!-- Viewport Meta -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no" />
+  <!-- <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no" /> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+
 
   <!-- Favicons -->
   <link rel="shortcut icon" href="favicon.png" />
@@ -134,9 +137,11 @@
                 <h2 class="heading-big fw700 text-color mb-0 relative">
                   Covid 19 <span class="newline"> Bangkalan</span>
                 </h2>
-                <h3 class="heading-big-subhead fw400 pt-20 pb-0">
+                <h3 class="heading-big-subhead fw400 pt-10 pb-0">
                   Berkolaborasi Untuk Saling Jaga Sesama, Kanal Informasi Covid19 Wilayah Bangkalan
                 </h3>
+                <h6 class="text-color"> <b> <small>(Bukan Situs Resmi Pemerintahan)</small> </b></h6>
+
               </div>
             </div>
 
@@ -178,11 +183,9 @@
 
   <!-- PROJECTS-->
   <section data-inpage-section="true" id="projects">
-
     <!-- PROJECTS-->
     <section class="page-section work-section pb-140 pb-sm-100">
       <div class="container">
-
         <div class="row">
           <div class="col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1 text-center">
             <div class="hero-section pt-70">
@@ -214,7 +217,7 @@
             <div id="chartContainer" style="height: 370px; width: 100%;"></div>
           </div>
         </div>
-        <small><a id="sumber" target="_blank"> Sumber Referensi Data </a> </small>
+        <small><a id="sumber" href="#" > Sumber Referensi Data </a> </small>
         <!-- Work hero section -->
         <div class="row">
           <div class="col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1 text-center">
