--- a/petadata.html
+++ b/petadata.html
@@ -14,7 +14,9 @@
 
   <!-- Viewport Meta -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no" />
+  <!-- <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no" /> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
+  <meta name="apple-mobile-web-app-capable" content="yes">
 
   <!-- Favicons -->
   <link rel="shortcut icon" href="favicon.png" />
@@ -132,6 +134,12 @@
               Data Diupdate Pada : <span id="dateUpdate" class="label label-danger"></span>
             </p>
           </div>
+          <div class="col-md-9 col-sm-12">
+            <div class="mapcontainer">
+                <div class="map">
+                </div>
+            </div>
+          </div>
           <div class="col-md-3 col-sm-12">
             <div class="display-block relative">
               <ul class="project-detail-content-list">
@@ -160,14 +168,9 @@
               <div id="chartContainer" style="height: 370px; width: 100%;"></div>
             </div>
           </div>
-          <div class="col-md-9 col-sm-12">
-            <div class="mapcontainer">
-                <div class="map">
-                </div>
-            </div>
-          </div>
+
         </div>
-        <small><a id="sumber1" target="_blank"> Sumber Referensi Data </a> </small>
+        <small><a id="sumber1" href="#" > Sumber Referensi Data </a> </small>
         <hr>
         <div class="row">
           <div class="col-md-12 mb-10 mb-sm-10">
@@ -180,16 +183,16 @@
             <div id="chartContainerBar" style="height: 370px; width: 100%;"></div>
           </div>
         </div>
-        <small><a id="sumber2" target="_blank"> Sumber Referensi Data </a> </small>
+        <small><a id="sumber2" href="#" > Sumber Referensi Data </a> </small>
         <br>Pada grafik ini kami tidak menyertakan status ODR, karena bagi kami setiap orang berada dalam resiko selama wabah ini berlangsung.
-        <br>Untuk Mengetahui Penjelasan Tentang Status Pasien Cek <a href=""> Status Pasien Covid19 </a>
+        <br>Untuk Mengetahui Penjelasan Tentang Status Pasien Cek <a href="infografik_page/statuspasien.html"> Status Pasien Covid19 </a>
         <br>
         <hr>
         <div class="row mb-30 mb-sm-30">
           <div class="col-md-12 col-sm-12 mb-10 mb-sm-10">
             <h2 class="heading-hero fw700 text-color">Tabel Pesebaran Covid19 Bangkalan</h2>
             <div class="">
-            Untuk Mengetahui Penjelasan Tentang Status Pasien Cek <a href=""> Status Pasien Covid19 </a>
+            Untuk Mengetahui Penjelasan Tentang Status Pasien Cek <a href="infografik_page/statuspasien.html"> Status Pasien Covid19 </a>
             </div>
             <p class="heading-medium fw400 pt-20">
               Data Diupdate Pada : <span id="dateUpdate2" class="label label-danger"></span>
@@ -203,7 +206,7 @@
               <div id="tabeldata" class="tableFixHead">
               </div>
             </div>
-            <small><a id="sumber3" target="_blank"> Sumber Referensi Data </a> </small>
+            <small><a id="sumber3" href="#" > Sumber Referensi Data </a> </small>
           </div>
         </div>
       </div>
