--- a/about.html
+++ b/about.html
@@ -14,7 +14,9 @@
 
   <!-- Viewport Meta -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no" />
+  <!-- <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no" /> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
+  <meta name="apple-mobile-web-app-capable" content="yes">
 
   <!-- Favicons -->
   <link rel="shortcut icon" href="favicon.png" />
