[fian] nambah new style home

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <h3 class="heading-big-subhead fw400 pt-10 pb-0">
                   Berkolaborasi Untuk Saling Jaga Sesama, Kanal Informasi Covid19 Wilayah Bangkalan
                 </h3>
-                <h6 class="text-color"> <b> <small>(Bukan Situs Resmi Pemerintahan)</small> </b></h6>
+                <h6 class=""> <b><small class="text-color">Bukan Situs Resmi Pemerintahan</small></b></h6>
 
               </div>
             </div>
