[fian] add for maintenance

--- a/petadata.html
+++ b/petadata.html
@@ -147,19 +147,19 @@
                 <li>
                   <strong class="fw700 text-black">ODP</strong>
                   <div class="">
-                    <strong id="odp" class="heading-medium fw700 text-odp">234 Orang</strong>
+                    <strong id="odp" class="heading-medium fw700 text-odp"></strong>
                   </div>
                 </li>
                 <li>
                   <strong class="fw700 text-black">PDP</strong>
                   <div class="">
-                    <strong id="pdp" class="heading-medium fw700 text-pdp">123 Orang</strong>
+                    <strong id="pdp" class="heading-medium fw700 text-pdp"></strong>
                   </div>
                 </li>
                 <li>
                   <strong class="fw700 text-black">POSITIF</strong>
                   <div class="">
-                    <strong id="positif" class="heading-medium fw700 text-positif">3 Orang</strong>
+                    <strong id="positif" class="heading-medium fw700 text-positif"></strong>
                   </div>
                 </li>
               </ul>
