--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
           <div class="container relative">
             <div class="row">
               <div class="col-md-8 col-md-offset-2 relative text-center">
-                <h4 class="heading-big text-color mb-0 relative">
+                <h4 class="heading-hero text-color mb-0 relative">
                   bangkalancovid19.org
                 </h4>
-                <h4 class="heading-hero fw700 text-color mb-0 relative">
+                <h4 class="heading-medium fw700 text-color mb-0 relative">
                   Sedang Dalam Maintenance
                 </h4>
                 <h6 class=""> <b><small class="text-color">Kita Akan Kembali Secepatnya</small></b></h6>
