--- a/petadata.html
+++ b/petadata.html
@@ -258,7 +258,7 @@
                       <td>52 Tahun</td>
                       <td>Belum Diketahui</td>
                       <td>Klampis</td>
-                      <td><span class="label label-danger"> Meninggal </span></td>
+                      <td><span class="label label-danger"> Meninggal (Negatif Corona)</span></td>
                     </tr>
                     <tr>
                       <td>2</td>
