[fina] update pasien kamal statis

--- a/petadata.html
+++ b/petadata.html
@@ -348,9 +348,9 @@
                     </tr>
                     <tr>
                       <td>5</td>
-                      <td>Belum Diketahui</td>
-                      <td>Belum Diketahui</td>
-                      <td>Belum Diketahui</td>
+                      <td>L</td>
+                      <td>61</td>
+                      <td>Kamal (Gili)</td>
                       <td>Kamal</td>
                       <td><span class="label label-warning"> Dirawat </span></td>
                     </tr>
