nama dimas salah

--- a/kolaborator.html
+++ b/kolaborator.html
@@ -132,7 +132,7 @@
               <div class="contact-no">
                 <h4 class="heading-medium  mb-10 fw700">Kontributor</h4>
                 <p class=" heading-small mb-0">
-                  1. Dimas Ikabalul Aulia   - <a href="https://twitter.com/masdimya" target="_blank"> @masdimya </a><br>
+                  1. Dimas Ikbalul Aulia   - <a href="https://twitter.com/masdimya" target="_blank"> @masdimya </a><br>
                   2. Sofian Eka Sandra  - <a href="https://twitter.com/fianekaid" target="_blank"> @fianekaid </a><br>
                   3. Supri xJuplex  - <a href="https://www.instagram.com/xjuplex/" target="_blank"> @xJuplex </a><br>
                   4. Wulanusari  - <a href="https://www.instagram.com/wulanurasri_/" target="_blank"> @wulanurasri_ </a><br>
