--- a/pranala.html
+++ b/pranala.html
@@ -133,7 +133,7 @@
                 <h4 class="heading-medium  mb-10 fw700">Tech That We Use</h4>
                 <p class=" heading-small mb-0">
                   1. All Technology To Build All Feature - <a href="#"> See This Link </a><br>
-                  2. Dimas Ikabalul Aulia   - <a href="https://twitter.com/masdimya" target="_blank"> @masdimya </a><br>
+                  2. Dimas Ikbalul Aulia   - <a href="https://twitter.com/masdimya" target="_blank"> @masdimya </a><br>
                   3. Sofian Eka Sandra  - <a href="https://twitter.com/fianekaid" target="_blank"> @fianekaid </a><br>
                 </p>
               </div>
