update positif dan pdp radar covid

--- a/petadata.html
+++ b/petadata.html
@@ -292,6 +292,14 @@
                       <td>Belum Diketahui</td>
                       <td><span class="label label-warning"> Dirawat </span></td>
                     </tr>
+                    <tr>
+                      <td>6</td>
+                      <td>Belum Diketahui</td>
+                      <td>Belum Diketahui</td>
+                      <td>Belum Diketahui</td>
+                      <td>Belum Diketahui</td>
+                      <td><span class="label label-warning"> Dirawat </span></td>
+                    </tr>
                   </tbody>
                 </table>
               </div>
@@ -350,15 +358,47 @@
                       <td>5</td>
                       <td>L</td>
                       <td>61</td>
-                      <td>Kamal (Gili)</td>
                       <td>Kamal</td>
+                      <td>Kamal</td>
+                      <td><span class="label label-warning"> Dirawat </span></td>
+                    </tr>
+                    <tr>
+                      <td>6</td>
+                      <td>P</td>
+                      <td>70</td>
+                      <td>Kamal</td>
+                      <td>Kamal</td>
+                      <td><span class="label label-warning"> Dirawat </span></td>
+                    </tr>
+                    <tr>
+                      <td>7</td>
+                      <td>L</td>
+                      <td>32</td>
+                      <td>Lajing</td>
+                      <td>Arosbaya</td>
+                      <td><span class="label label-warning"> Dirawat </span></td>
+                    </tr>
+                    <tr>
+                      <td>8</td>
+                      <td>P</td>
+                      <td>43</td>
+                      <td>Banyuajuh</td>
+                      <td>Kamal</td>
+                      <td><span class="label label-warning"> Dirawat </span></td>
+                    </tr>
+                    <tr>
+                      <td>9</td>
+                      <td>L</td>
+                      <td>28</td>
+                      <td>Trogan</td>
+                      <td>Klampis</td>
                       <td><span class="label label-warning"> Dirawat </span></td>
                     </tr>
                   </tbody>
                 </table>
               </div>
               <div class="panel-body">
-                <small><a href="#" > Sumber : Radar Covid 19 Pemprov </a> </small>
+                <small><a href="https://radarcovid19.jatimprov.go.id/" target="_blank" > Sumber : Radar Covid 19 Pemprov </a> </small>
               </div>
             </div>
           </div>
